api.yml added for admin Operations
